--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       ]},
       { key:"extras", items:[
         { he:"ציפס קטן", ar:"بطاطس مقلية صغيرة", en:"Small Fries", ru:"Картофель фри (мал.)", price:"20₪" },
-        { he:"ציפس גדול", ar:"بطاطس مقلية كبيرة", en:"Large Fries", ru:"Картофель фри (бол.)", price:"28₪" },
+        { he:"ציפס גדול", ar:"بطاطس مقلية كبيرة", en:"Large Fries", ru:"Картофель фри (бол.)", price:"28₪" },
         { he:"סלט ירקות", ar:"سلطة خضار", en:"Vegetable Salad", ru:"Овощной салат", price:"20₪" },
         { he:"ביצה", ar:"بيضة", en:"Egg", ru:"Яйцо", price:"4₪" },
       ]},
