--- a/index.html
+++ b/index.html
@@ -224,11 +224,13 @@
         { he:"בגט פרגית", ar:"باجيت فخذ دجاج (פרגית)", en:"Chicken Thigh Baguette (Pargit)", ru:"Багет с кур. бедром (паргит)", price:"40₪" },
       ]},
       { key:"extras", items:[
-        { he:"ציפס קטן", ar:"بطاطس مقلية صغيرة", en:"Small Fries", ru:"Картофель фри (мал.)", price:"20₪" },
-        { he:"ציפס גדול", ar:"بطاطس مقلية كبيرة", en:"Large Fries", ru:"Картофель фри (бол.)", price:"28₪" },
-        { he:"סלט ירקות", ar:"سلطة خضار", en:"Vegetable Salad", ru:"Овощной салат", price:"20₪" },
-        { he:"ביצה", ar:"بيضة", en:"Egg", ru:"Яйцо", price:"4₪" },
-      ]},
+  { he:"ציפס קטן", ar:"بطاطس مقلية صغيرة", en:"Small Fries", ru:"Картофель фри (мал.)", price:"20₪" },
+  { he:"ציפס גדול", ar:"بطاطس مقلية كبيرة", en:"Large Fries", ru:"Картофель фри (бол.)", price:"28₪" },
+  { he:"סלט ירקות", ar:"سلطة خضار", en:"Vegetable Salad", ru:"Овощной салат", price:"20₪" },
+  { he:"ביצה", ar:"بيضة", en:"Egg", ru:"Яйцо", price:"4₪" },
+  { he:"כדורי פלאפל (5 יחידות)", ar:"كرات فلافل (5 قطع)", en:"Falafel Balls (5 pcs)", ru:"Шарики фалафеля (5 шт)", price:"10₪" }
+]}
+
       { key:"drinks", items:[
         { he:"שתייה קלה", ar:"مشروبات غازية", en:"Soft drinks", ru:"Безалкогольные напитки", price:"10₪ / 12₪" },
       ]},
