--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     header.sticky{position:sticky;top:0;z-index:40;background:rgba(255,255,255,.92);backdrop-filter:blur(6px);border-bottom:1px solid var(--border)}
     .topbar{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
     .brand{display:flex;align-items:center;gap:12px}
+    .brand-badge{width:42px;height:42px;border-radius:12px;background:var(--accent);overflow:hidden;display:flex;align-items:center;justify-content:center}
     .brand-badge img{width:100%;height:100%;object-fit:contain;border-radius:12px;background:#ff7a00}
     .brand-name{font-weight:800;font-size:20px;letter-spacing:.2px;color:var(--accent)}
     nav a{margin-inline:10px;text-decoration:none;color:var(--text)}
@@ -223,13 +224,12 @@
         { he:"בגט פרגית", ar:"باجيت فخذ دجاج (פרגית)", en:"Chicken Thigh Baguette (Pargit)", ru:"Багет с кур. бедром (паргит)", price:"40₪" },
       ]},
       { key:"extras", items:[
-  { he:"ציפס קטן", ar:"بطاطس مقلية صغيرة", en:"Small Fries", ru:"Картофель фри (мал.)", price:"20₪" },
-  { he:"ציפס גדול", ar:"بطاطس مقلية كبيرة", en:"Large Fries", ru:"Картофель фри (бол.)", price:"28₪" },
-  { he:"סלט ירקות", ar:"سلطة خضار", en:"Vegetable Salad", ru:"Овощной салат", price:"20₪" },
-  { he:"ביצה", ar:"بيضة", en:"Egg", ru:"Яйцо", price:"4₪" },
-  { he:"כדורי פלאפל (5 יחידות)", ar:"كرات فلافل (5 قطع)", en:"Falafel Balls (5 pcs)", ru:"Шарики фалафеля (5 шт)", price:"10₪" }
-]}
-
+        { he:"ציפס קטן", ar:"بطاطس مقلية صغيرة", en:"Small Fries", ru:"Картофель фри (мал.)", price:"20₪" },
+        { he:"ציפס גדול", ar:"بطاطس مقلية كبيرة", en:"Large Fries", ru:"Картофель фри (бол.)", price:"28₪" },
+        { he:"סלט ירקות", ar:"سلطة خضار", en:"Vegetable Salad", ru:"Овощной салат", price:"20₪" },
+        { he:"ביצה", ar:"بيضة", en:"Egg", ru:"Яйцо", price:"4₪" },
+        { he:"כדורי פלאפל (5 יחידות)", ar:"كرات فلافل (5 قطع)", en:"Falafel Balls (5 pcs)", ru:"Шарики фалафеля (5 шт)", price:"10₪" }
+      ]},
       { key:"drinks", items:[
         { he:"שתייה קלה", ar:"مشروبات غازية", en:"Soft drinks", ru:"Безалкогольные напитки", price:"10₪ / 12₪" },
       ]},
