--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@ const menuData={
     drinks:[["مشروبات غازية","10₪ / 12₪"]]
   },
   en:{
-    plates:[["Hummus Gargerim","30₪"],["Hummus Fava","30₪"],["Mix (Hummus+Fava+Masabaha)","30₪"],["Masabaha","30₪"],["Hummus with Mushrooms","36₪"],["Hummus with Meat","48₪"],["Shakshuka (2 Eggs)","43₪"],["Omelette with Hummus","34₪"],["Kebab","60₪"],["Chicken Breast","55₪"],["Hummus Sabich Plate with Egg","38₪"],["Healthy Salad with Chickpeas, Egg & Tahini","35₪"]],
+    plates:[["Hummus Gargerim","30₪"],["Hummus Ful","30₪"],["Mix (Hummus+Ful+Msabakha)","30₪"],["Msabakha","30₪"],["Hummus with Mushrooms","36₪"],["Hummus with Meat","48₪"],["Shakshuka (2 Eggs)","43₪"],["Omelet with Hummus","34₪"],["Kebab","60₪"],["Chicken Breast","55₪"],["Hummus Sabich Plate with Egg","38₪"],["Healthy Salad with Chickpeas, Egg & Tahini","35₪"]],
     business:[["Hummus Plate with Fries, Falafel & Cola","45₪ | Until 5PM"]],
-    pita:[["Falafel","20₪"],["Shakshuka","25₪"],["Omelette","25₪"],["Masabaha","20₪"],["Fava","20₪"],["Hummus","20₪"],["Sabich Pita","26₪"],["Schnitzel","30₪"],["Kebab","35₪"],["Spicy Pita","30₪"],["Chicken Breast Pita","30₪"]],
-    baguette:[["Spicy Merguez Baguette","40₪"],["Schnitzel Baguette","40₪"],["Mixed Baguette","40₪"],["Kebab Baguette","45₪"],["Chicken Breast Baguette","40₪"],["Pargit Baguette","40₪"]],
-    sides:[["Small Fries","20₪"],["Large Fries","28₪"],["Vegetable Salad","20₪"],["Egg","4₪"],["Falafel Balls (5 pcs)","10₪"]],
+    pita:[["Falafel","20₪"],["Shakshuka","25₪"],["Omelet","25₪"],["Msabakha","20₪"],["Ful","20₪"],["Hummus","20₪"],["Sabich Pita","26₪"],["Schnitzel","30₪"],["Kebab","35₪"],["Spicy Merguez Pita","30₪"],["Chicken Breast Pita","30₪"]],
+    baguette:[["Spicy Merguez Baguette","40₪"],["Schnitzel Baguette","40₪"],["Jerusalem Mix Baguette","40₪"],["Kebab Baguette","45₪"],["Chicken Breast Baguette","40₪"],["Spring chicken Baguette","40₪"]],
+    sides:[["Small Fries","20₪"],["Large Fries","28₪"],["Israeli Salad","20₪"],["Egg","4₪"],["Falafel Balls (5 pcs)","10₪"]],
     drinks:[["Soft Drinks","10₪ / 12₪"]]
   },
   ru:{
