--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ const menuData={
     drinks:[["مشروبات غازية","10₪ / 12₪"]]
   },
   en:{
-    plates:[["Hummus With Chikpeas","30₪"],["Hummus Ful","30₪"],["Mix (Hummus+Ful+Msabakha)","30₪"],["Msabakha","30₪"],["Hummus with Mushrooms","36₪"],["Hummus with Meat","48₪"],["Shakshuka (2 Eggs)","43₪"],["Omelet(includes: hummus & salad)","34₪"],["Kabab (include: hummus & salad )","60₪"],["Chicken Breast","55₪"],["Hummus Sabich Plate with Egg","38₪"],["Healthy Salad with Chickpeas, Egg & Tahini","35₪"]],
+    plates:[["Hummus With Chikpeas","30₪"],["Hummus Ful","30₪"],["Mix (Hummus+Ful+Msabakha)","30₪"],["Msabakha","30₪"],["Hummus with Mushrooms","36₪"],["Hummus with Meat","48₪"],["Shakshuka (2 Eggs)","43₪"],["Omelet(includes: hummus & salad)","34₪"],["Kabab (include: hummus & salad )","60₪"],["Chicken Breast(includes: hummus & salad)","55₪"],["Hummus Sabich Plate with Egg","38₪"],["Healthy Salad with Chickpeas, Egg & Tahini","35₪"]],
     business:[["Hummus Plate with Fries, Falafel & Cola","45₪ | Until 5PM"]],
     pita:[["Falafel","20₪"],["Shakshuka","25₪"],["Omelet","25₪"],["Msabakha","20₪"],["Ful","20₪"],["Hummus","20₪"],["Sabich Pita","26₪"],["Schnitzel","30₪"],["Kebab","35₪"],["Spicy Merguez Pita","30₪"],["Chicken Breast Pita","30₪"]],
     baguette:[["Spicy Merguez Baguette","40₪"],["Schnitzel Baguette","40₪"],["Jerusalem Mix Baguette","40₪"],["Kebab Baguette","45₪"],["Chicken Breast Baguette","40₪"],["Spring chicken Baguette","40₪"]],
